section-5/ingresses/airflow-alb-ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "airflow-ingress"
  namespace: "dev"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: airflow-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "airflow-dev-web"
              servicePort: 8080
